--- a/.github/workflows/master_maori-subject-heading.yml
+++ b/.github/workflows/master_maori-subject-heading.yml
@@ -10,8 +10,12 @@ on:
   workflow_dispatch:
 
 jobs:
+        
   build:
     runs-on: windows-latest
+    defaults:
+      run:
+        working-directory: "./web"
 
     steps:
       - uses: actions/checkout@v2
