--- a/.github/workflows/master_maori-subject-heading.yml
+++ b/.github/workflows/master_maori-subject-heading.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: windows-latest
     defaults:
       run:
-        working-directory: dart_project
+        working-directory: "./web"
     steps:
       - uses: actions/checkout@v2
 
